family to class tree + method rename (this+new+sig)
I class tree + class tree - add get family + is in family methods.
method rename - rename signature of family classes + rename methods call: this. and new C(). when this and C in family.
Main - not calling rename from classTree cause in RenameVisitor.

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,16 @@
 /shelf/
 .idea/
 out/
+build/
 
 build.xml
 
 compilers-project-2020-public.iml
 
 examples/examples.iml
+
+src/Lexer.java
+src/Parser.java
+src/sym.java
+
+mjavac.jar
